# kadeu-prototype

./: .gitignore  Cargo.toml  README.md
d2/: overview.d2
src/: app.rs  card.rs  cards.rs  config.rs  de.rs  de_csv.rs  de_json.rs  errors.rs  game.rs  interface.rs  io.rs  kadeu.rs  kcard.rs  lib.rs  main.rs  model.rs  ui.rs  util.rs
src/cards/: back.rs  cards.rs  de.rs  mod.rs
src/core/: cards.rs  game.rs
src/de/: json.rs
src/decks/: de.rs  mod.rs  model.rs
