[package]
name = "kadeu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
csv = "1.1"

# Too much right now :(
#crossbeam = "0.8"
#config = { version = "0.13.3" }
#chrono = { version = "0.4", features = ["serde"] }
#termion = "*"
#rand = { version = "0.7.3", default-features = false, features = ["std"] }
#thiserror = "1.0"
#tui = "0.19" # These reqs might change later depending on the new project.
#crossterm = "0.25"
#home = "0.5.4"
#uuid = { version="1.3.0", features=["v4", "fast-rng"] }
